# FlagGems

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  debug.md  needtofix.py  pyproject.toml
.github/workflows/: auto-sync.yaml  backend-test.yaml  code_scan.yaml  coverage.yaml  cpp-op-test.yaml  daily.yaml  hugo-site.yaml  image-builder.yaml  linter.yml  mkdocs.yaml  op-test.yaml  release.yaml  review-stats.yaml  sync-to-gitcode.yaml  unittest.yaml
benchmark/: conftest.py  core_shapes.yaml  performance_utils.py  test_binary_pointwise_perf.py  test_blas_perf_parallel.py  test_reduction_perf.py  test_special_perf.py  test_tensor_constructor_perf.py  test_unary_pointwise_perf.py  test_vllm_perf.py
conf/: operators.yaml
hugo-docs/: hugo.yaml
hugo-docs/content/en/contribution/: cpp-wrapper.md  overview.md  pointwise-dynamic.md
hugo-docs/content/en/overview/: _index.md
hugo-docs/content/en/references/: changelog.md  operators.md
hugo-docs/content/en/references/test/: _index.md
hugo-docs/content/en/references/test/unit/: _index.md
hugo-docs/content/zh-cn/contribution/: cpp-wrapper.md  overview.md  pointwise-dynamic.md
hugo-docs/content/zh-cn/overview/: _index.md
hugo-docs/content/zh-cn/usage/: tuning.md
hugo-docs/public/: 404.html  en.search.min.01e06485cbfd6fea743ffc3cf16bf807a385fbc0cd9e5c846259fd1d173a78e4.js  en.search.min.0664b7b4a2a4acf96f0f51c902278c027dc096daaaedb390269140daec4c2590.js  index.html  index.xml  manifest.json  sitemap.xml
hugo-docs/public/categories/: index.html  index.xml
hugo-docs/public/tags/: index.html  index.xml
hugo-docs/resources/_gen/assets/: book.scss_b807c86e8030af4cdc30edccea379f5f.content  book.scss_b807c86e8030af4cdc30edccea379f5f.json
include/flag_gems/: backend_utils.h  operators.h
lib/: CMakeLists.txt  addmm.cpp  bmm.cpp  copy.cpp  fp8_matmul.cpp  fp8_matmul_direct.cpp  fused_add_rms_norm.cpp  rms_norm.cpp
lib/pointwise_dynamic_cpp/: CMakeLists.txt  pointwise_prepare_args.h  prebuild_kernels.py
src/flag_gems/: __init__.py
src/flag_gems/csrc/: aten_patch.cpp  cstub.cpp
src/flag_gems/fused/: __init__.py  cross_entropy_loss.py  fused_moe.py  moe_align_block_size.py  sparse_attention.py
src/flag_gems/ops/: __init__.py  act_quant.py  all.py  amax.py  aminmax.py  any.py  fp8_matmul.py  hadamard_transform.py  hypot.py  margin_ranking_loss.py  one_hot.py  sgn_.py  topk.py
src/flag_gems/runtime/: register.py
src/flag_gems/runtime/backend/: __init__.py
src/flag_gems/runtime/backend/_ascend/: __init__.py  tune_configs.yaml
src/flag_gems/runtime/backend/_ascend/fused/: sparse_attention.py
src/flag_gems/runtime/backend/_ascend/ops/: __init__.py  all.py  amax.py  angle.py  any.py  cat.py  cummin.py  exponential_.py  groupnorm.py  hadamard_transform.py  index.py  index_add.py  index_select.py  matmul_bf16.py  matmul_int8.py  mean.py
src/flag_gems/runtime/backend/_cambricon/ops/: __init__.py  all.py  amax.py  any.py  index_select.py
src/flag_gems/runtime/backend/_enflame/: __init__.py
src/flag_gems/runtime/backend/_enflame/fused/: __init__.py
src/flag_gems/runtime/backend/_enflame/ops/: __init__.py
src/flag_gems/runtime/backend/_iluvatar/: __init__.py
src/flag_gems/runtime/backend/_nvidia/: tune_configs.yaml
src/flag_gems/utils/: pointwise_dynamic.py
src/flag_gems/utils/configs/: fused_moe_config.json
tests/: conftest.py  test_arange.py  test_attention_ops.py  test_binary_pointwise_ops.py  test_blas_ops.py  test_fill.py  test_flash_attention.py  test_flash_attn_varlen_func.py  test_general_reduction_ops.py  test_grouped_mm.py  test_multinomial.py  test_reduction_ops.py  test_special_ops.py  test_tensor_constructor_ops.py  test_unary_pointwise_ops.py  test_vllm_ops.py
tools/: gpu_check_thead.sh  run_backend_tests_ascend.sh  run_backend_tests_hygon.sh  run_backend_tests_iluvatar.sh  run_backend_tests_kunlunxin.sh  run_backend_tests_mthreads.sh  run_backend_tests_nvidia.sh  run_backend_tests_tsingmicro.sh  run_tests.py  setup_ascend.sh  setup_hygon.sh  setup_iluvatar.sh  setup_metax.sh  setup_mthreads.sh  setup_nvidia.sh  setup_thead.sh  setup_tsingmicro.sh  test-op.sh  test_backends.sh
(+43 files in other folders)
